--- a/blog-details-right.html
+++ b/blog-details-right.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="assets/vendors/owl-carousel/css/owl.theme.default.min.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/growim.css" />
+    <link rel="stylesheet" href="assets/css/mpl_theme.css" />
 </head>
 
 <body class="custom-cursor">
@@ -109,11 +109,11 @@
                                                                         <div class="demo-one__image">
                                                                             <img src="assets/images/growim-landing/home-1.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
-                                                                                <a href="index.html" class="growim-btn demo-one__btn">
-                                                                                    <span class="growim-btn__text">Multi Page</span>
+                                                                                <a href="index.html" class="mpl-btn demo-one__btn">
+                                                                                    <span class="mpl-btn__text">Multi Page</span>
                                                                                 </a><!-- /.thm-btn demo-one__btn -->
-                                                                                <a href="index-one-page.html" class="growim-btn demo-one__btn">
-                                                                                    <span class="growim-btn__text">One Page</span>
+                                                                                <a href="index-one-page.html" class="mpl-btn demo-one__btn">
+                                                                                    <span class="mpl-btn__text">One Page</span>
                                                                                 </a><!-- /.thm-btn demo-one__btn -->
                                                                             </div><!-- /.demo-one__btns -->
                                                                         </div><!-- /.demo-one__image -->
@@ -129,11 +129,11 @@
                                                                         <div class="demo-one__image">
                                                                             <img src="assets/images/growim-landing/home-2.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
-                                                                                <a href="index-2.html" class="growim-btn demo-one__btn">
-                                                                                    <span class="growim-btn__text">Multi Page</span>
+                                                                                <a href="index-2.html" class="mpl-btn demo-one__btn">
+                                                                                    <span class="mpl-btn__text">Multi Page</span>
                                                                                 </a><!-- /.thm-btn demo-one__btn -->
-                                                                                <a href="index-2-one-page.html" class="growim-btn demo-one__btn">
-                                                                                    <span class="growim-btn__text">One Page</span>
+                                                                                <a href="index-2-one-page.html" class="mpl-btn demo-one__btn">
+                                                                                    <span class="mpl-btn__text">One Page</span>
                                                                                 </a><!-- /.thm-btn demo-one__btn -->
                                                                             </div><!-- /.demo-one__btns -->
                                                                         </div><!-- /.demo-one__image -->
@@ -149,11 +149,11 @@
                                                                         <div class="demo-one__image">
                                                                             <img src="assets/images/growim-landing/home-3.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
-                                                                                <a href="index-3.html" class="growim-btn demo-one__btn">
-                                                                                    <span class="growim-btn__text">Multi Page</span>
+                                                                                <a href="index-3.html" class="mpl-btn demo-one__btn">
+                                                                                    <span class="mpl-btn__text">Multi Page</span>
                                                                                 </a><!-- /.thm-btn demo-one__btn -->
-                                                                                <a href="index-3-one-page.html" class="growim-btn demo-one__btn">
-                                                                                    <span class="growim-btn__text">One Page</span>
+                                                                                <a href="index-3-one-page.html" class="mpl-btn demo-one__btn">
+                                                                                    <span class="mpl-btn__text">One Page</span>
                                                                                 </a><!-- /.thm-btn demo-one__btn -->
                                                                             </div><!-- /.demo-one__btns -->
                                                                         </div><!-- /.demo-one__image -->
@@ -169,11 +169,11 @@
                                                                         <div class="demo-one__image">
                                                                             <img src="assets/images/growim-landing/home-4.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
-                                                                                <a href="index-4.html" class="growim-btn demo-one__btn">
-                                                                                    <span class="growim-btn__text">Multi Page</span>
+                                                                                <a href="index-4.html" class="mpl-btn demo-one__btn">
+                                                                                    <span class="mpl-btn__text">Multi Page</span>
                                                                                 </a><!-- /.thm-btn demo-one__btn -->
-                                                                                <a href="index-4-one-page.html" class="growim-btn demo-one__btn">
-                                                                                    <span class="growim-btn__text">One Page</span>
+                                                                                <a href="index-4-one-page.html" class="mpl-btn demo-one__btn">
+                                                                                    <span class="mpl-btn__text">One Page</span>
                                                                                 </a><!-- /.thm-btn demo-one__btn -->
                                                                             </div><!-- /.demo-one__btns -->
                                                                         </div><!-- /.demo-one__image -->
@@ -189,11 +189,11 @@
                                                                         <div class="demo-one__image">
                                                                             <img src="assets/images/growim-landing/home-5.png" alt="MPL Softwares">
                                                                             <div class="demo-one__btns">
-                                                                                <a href="index-6.html" class="growim-btn demo-one__btn">
-                                                                                    <span class="growim-btn__text">Multi Page</span>
+                                                                                <a href="index-6.html" class="mpl-btn demo-one__btn">
+                                                                                    <span class="mpl-btn__text">Multi Page</span>
                                                                                 </a><!-- /.thm-btn demo-one__btn -->
-                                                                                <a href="index-5-one-page.html" class="growim-btn demo-one__btn">
-                                                                                    <span class="growim-btn__text">One Page</span>
+                                                                                <a href="index-5-one-page.html" class="mpl-btn demo-one__btn">
+                                                                                    <span class="mpl-btn__text">One Page</span>
                                                                                 </a><!-- /.thm-btn demo-one__btn -->
                                                                             </div><!-- /.demo-one__btns -->
                                                                         </div><!-- /.demo-one__image -->
@@ -280,8 +280,8 @@
                                 <i class="flaticon-cart" aria-hidden="true"></i>
                                 <span class="sr-only">Search</span>
                             </a><!-- /.search-toggler -->
-                            <a href="contact.html" class="growim-btn main-header__btn">
-                                <span class="growim-btn__text">Work With Us</span>
+                            <a href="contact.html" class="mpl-btn main-header__btn">
+                                <span class="mpl-btn__text">Work With Us</span>
                             </a><!-- /.main-header__btn -->
                         </div><!-- /.main-header__right -->
                     </div><!-- /.main-header__inner -->
@@ -560,8 +560,8 @@
                                 <p class="footer-widget__text">
                                     Nullam interdum libero vitae pretium aliquam donec nibh purus laoreet in ullamcorper vel malesuada sit amet enim.
                                 </p>
-                                <a class="growim-btn growim-btn--white" href="contact.html">
-                                    <span class="growim-btn__text">Contact Us</span>
+                                <a class="mpl-btn mpl-btn--white" href="contact.html">
+                                    <span class="mpl-btn__text">Contact Us</span>
                                 </a>
                                 <div class="footer-widget__social">
                                     <p class="footer-widget__social__text">Follow on</p>
@@ -690,8 +690,8 @@
         <div class="search-popup__content">
             <form role="search" method="get" class="search-popup__form" action="#">
                 <input type="text" id="search" placeholder="Search Here..." />
-                <button type="submit" aria-label="search submit" class="growim-btn">
-                    <span class="growim-btn__text"><i class="flaticon-search"></i></span>
+                <button type="submit" aria-label="search submit" class="mpl-btn">
+                    <span class="mpl-btn__text"><i class="flaticon-search"></i></span>
                 </button>
             </form>
         </div>
@@ -783,7 +783,7 @@
     <script src="assets/vendors/jquery-circleType/jquery.circleType.js"></script>
     <script src="assets/vendors/jquery-lettering/jquery.lettering.min.js"></script>
     <!-- template js -->
-    <script src="assets/js/growim.js"></script>
+    <script src="assets/js/mpl_theme.js"></script>
 </body>
 
 
