--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="assets/vendors/owl-carousel/css/owl.theme.default.min.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/growim.css" />
+    <link rel="stylesheet" href="assets/css/mpl_theme.css" />
     <link rel="stylesheet" href="assets/css/custom.css" />
 </head>
 
@@ -101,8 +101,8 @@
                             <i class="flaticon-cart" aria-hidden="true"></i>
                             <span class="sr-only">Search</span>
                         </a> -->
-                        <a href="contact.html" class="growim-btn growim-btn--white main-header__btn">
-                            <span class="growim-btn__text">Start A Project</span>
+                        <a href="contact.html" class="mpl-btn mpl-btn--white main-header__btn">
+                            <span class="mpl-btn__text">Start A Project</span>
                         </a><!-- /.thm-btn main-header__btn -->
                     </div><!-- /.main-header__right -->
                 </div><!-- /.main-header__inner -->
@@ -160,9 +160,9 @@
                                 Partner with MPL Softwares – your web development experts delivering exceptional websites, e-commerce platforms, and mobile apps that drive results for businesses worldwide.
                             </p><!-- slider-text -->
                             <div class="main-slider-one__btn">
-                                <a class="growim-btn growim-btn--white" href="services.html">
-                                    <span class="growim-btn__text">view services</span>
-                                    <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
+                                <a class="mpl-btn mpl-btn--white" href="services.html">
+                                    <span class="mpl-btn__text">view services</span>
+                                    <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                                 </a>
                             </div><!-- slider-btn -->
                             <a href="https://www.youtube.com/mplsoftwares" class="video-popup">
@@ -212,9 +212,9 @@
                                 We scale clinics and hospitals to profitability using our 360 degree appraoch to digital marketing.
                             </p>
                             <div class="main-slider-one__btn">
-                                <a class="growim-btn growim-btn--white" href="services.html">
-                                    <span class="growim-btn__text">view services</span>
-                                    <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
+                                <a class="mpl-btn mpl-btn--white" href="services.html">
+                                    <span class="mpl-btn__text">view services</span>
+                                    <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                                 </a>
                             </div>
                             <a href="https://www.youtube.com/mplsoftwares" class="video-popup">
@@ -264,9 +264,9 @@
                                 We know creativity has no limits and we explore every option to bring patients to your doorstep.
                             </p>
                             <div class="main-slider-one__btn">
-                                <a class="growim-btn growim-btn--white" href="services.html">
-                                    <span class="growim-btn__text">view services</span>
-                                    <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
+                                <a class="mpl-btn mpl-btn--white" href="services.html">
+                                    <span class="mpl-btn__text">view services</span>
+                                    <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                                 </a>
                             </div>
                             <a href="https://www.youtube.com/watch?v=h9MbznbxlLc" class="video-popup">
@@ -410,9 +410,9 @@ With a passionate team of designers and developers, we ensure every project is c
                                     </div>
                                 </li>
                             </ul>
-                            <a class="growim-btn" href="about.html">
-                                <span class="growim-btn__text">About Us</span>
-                                <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
+                            <a class="mpl-btn" href="about.html">
+                                <span class="mpl-btn__text">About Us</span>
+                                <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                             </a>
                         </div><!-- /.why-choose-two__content -->
                     </div><!-- /.col-lg-6 -->
@@ -897,11 +897,11 @@ __SVGATOR_PLAYER__.build({"root":"e65JtZjEkLp1","animations":[{"duration":2500,"
                                 </li>
 
                             </ul>
-                            <a class="growim-btn" href="about.html">
+                            <a class="mpl-btn" href="about.html">
 
-                                <span class="growim-btn__text">About Us</span>
+                                <span class="mpl-btn__text">About Us</span>
 
-                                <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
+                                <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
 
                             </a>
                         </div><!-- /.why-choose-one__content -->
@@ -1005,7 +1005,7 @@ window.addEventListener("message", function (e) {
 }
 
 
-    .package-one__item__inner .growim-btn {
+    .package-one__item__inner .mpl-btn {
     position: absolute;
     left: 0;
     right: 0;
@@ -1047,9 +1047,9 @@ window.addEventListener("message", function (e) {
                         </p>
                     </div><!-- /.portfolio-one__item__content -->
                     <div class="portfolio-one__item__btn">
-                        <a class="growim-btn growim-btn--white" href="portfolio-details.html">
-                            <span class="growim-btn__text">View Portfolio</span>
-                            <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
+                        <a class="mpl-btn mpl-btn--white" href="portfolio-details.html">
+                            <span class="mpl-btn__text">View Portfolio</span>
+                            <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                         </a>
                     </div><!-- /.portfolio-one__item__btn -->
                     <div class="hover-item__box">
@@ -1066,9 +1066,9 @@ window.addEventListener("message", function (e) {
                         </p>
                     </div><!-- /.portfolio-one__item__content -->
                     <div class="portfolio-one__item__btn">
-                        <a class="growim-btn growim-btn--white" href="portfolio-details.html">
-                            <span class="growim-btn__text">View Portfolio</span>
-                            <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
+                        <a class="mpl-btn mpl-btn--white" href="portfolio-details.html">
+                            <span class="mpl-btn__text">View Portfolio</span>
+                            <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                         </a>
                     </div><!-- /.portfolio-one__item__btn -->
                     <div class="hover-item__box">
@@ -1085,9 +1085,9 @@ window.addEventListener("message", function (e) {
                         </p>
                     </div><!-- /.portfolio-one__item__content -->
                     <div class="portfolio-one__item__btn">
-                        <a class="growim-btn growim-btn--white" href="portfolio-details.html">
-                            <span class="growim-btn__text">View Portfolio</span>
-                            <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
+                        <a class="mpl-btn mpl-btn--white" href="portfolio-details.html">
+                            <span class="mpl-btn__text">View Portfolio</span>
+                            <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                         </a>
                     </div><!-- /.portfolio-one__item__btn -->
                     <div class="hover-item__box">
@@ -1216,9 +1216,9 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
 
                         <h3 class="sec-title__title">Recent Blog Posts</h3><!-- /.sec-title__title -->
                     </div><!-- /.sec-title -->
-                    <a class="growim-btn growim-btn--white" href="blog-list-right.html">
-                        <span class="growim-btn__text">View All News</span>
-                        <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
+                    <a class="mpl-btn mpl-btn--white" href="blog-list-right.html">
+                        <span class="mpl-btn__text">View All News</span>
+                        <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                     </a>
                 </div>
                 <div class="blog-one__carousel growim-owl__carousel growim-owl__carousel--with-shadow growim-owl__carousel--basic-nav owl-carousel owl-theme" data-owl-options='{
@@ -1374,9 +1374,9 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
                                 <p class="footer-widget__text">
                                     We’re Strategic Software Development Company
                                 </p>
-                                <a class="growim-btn growim-btn--white" href="contact.html">
-                                    <span class="growim-btn__text">Contact Us</span>
-                                    <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
+                                <a class="mpl-btn mpl-btn--white" href="contact.html">
+                                    <span class="mpl-btn__text">Contact Us</span>
+                                    <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                                 </a>
                                 <div class="footer-widget__social">
                                     <p class="footer-widget__social__text">Follow on</p>
@@ -1507,8 +1507,8 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
         <div class="search-popup__content">
             <form role="search" method="get" class="search-popup__form" action="#">
                 <input type="text" id="search" placeholder="Search Here..." />
-                <button type="submit" aria-label="search submit" class="growim-btn">
-                    <span class="growim-btn__text"><i class="flaticon-search"></i></span>
+                <button type="submit" aria-label="search submit" class="mpl-btn">
+                    <span class="mpl-btn__text"><i class="flaticon-search"></i></span>
                 </button>
             </form>
         </div>
@@ -1600,7 +1600,7 @@ __SVGATOR_PLAYER__.build({"root":"etbUfR26A5d1","animations":[{"duration":2400,"
     <script src="assets/vendors/jquery-circleType/jquery.circleType.js"></script>
     <script src="assets/vendors/jquery-lettering/jquery.lettering.min.js"></script>
     <!-- template js -->
-    <script src="assets/js/growim.js"></script>
+    <script src="assets/js/mpl_theme.js"></script>
     <script>
         window.writerEmbedConfig = {
           token: 'aQ9W7zoEDrFy4NK_G1Y-NAZ_0ulFs4tDauHkgdijo3k',
