--- a/service-details.html
+++ b/service-details.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="assets/vendors/owl-carousel/css/owl.theme.default.min.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/growim.css" />
+    <link rel="stylesheet" href="assets/css/mpl_theme.css" />
     <link rel="stylesheet" href="assets/css/custom.css" />
 </head>
 
@@ -100,8 +100,8 @@
                             <i class="flaticon-cart" aria-hidden="true"></i>
                             <span class="sr-only">Search</span>
                         </a> -->
-                        <a href="contact.html" class="growim-btn growim-btn--white main-header__btn">
-                            <span class="growim-btn__text">Start A Project</span>
+                        <a href="contact.html" class="mpl-btn mpl-btn--white main-header__btn">
+                            <span class="mpl-btn__text">Start A Project</span>
                         </a><!-- /.thm-btn main-header__btn -->
                     </div><!-- /.main-header__right -->
                 </div><!-- /.main-header__inner -->
@@ -345,9 +345,9 @@
                                 <p class="footer-widget__text">
                                     We’re Strategic Software Development Company
                                 </p>
-                                <a class="growim-btn growim-btn--white" href="contact.html">
-                                    <span class="growim-btn__text">Contact Us</span>
-                                    <span class="growim-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
+                                <a class="mpl-btn mpl-btn--white" href="contact.html">
+                                    <span class="mpl-btn__text">Contact Us</span>
+                                    <span class="mpl-btn__icon"><i class="flaticon-up-right-arrow"></i></span>
                                 </a>
                                 <div class="footer-widget__social">
                                     <p class="footer-widget__social__text">Follow on</p>
@@ -477,8 +477,8 @@
         <div class="search-popup__content">
             <form role="search" method="get" class="search-popup__form" action="#">
                 <input type="text" id="search" placeholder="Search Here..." />
-                <button type="submit" aria-label="search submit" class="growim-btn">
-                    <span class="growim-btn__text"><i class="flaticon-search"></i></span>
+                <button type="submit" aria-label="search submit" class="mpl-btn">
+                    <span class="mpl-btn__text"><i class="flaticon-search"></i></span>
                 </button>
             </form>
         </div>
@@ -570,7 +570,7 @@
     <script src="assets/vendors/jquery-circleType/jquery.circleType.js"></script>
     <script src="assets/vendors/jquery-lettering/jquery.lettering.min.js"></script>
     <!-- template js -->
-    <script src="assets/js/growim.js"></script>
+    <script src="assets/js/mpl_theme.js"></script>
 </body>
 
 
