--- a/about.html
+++ b/about.html
@@ -11,8 +11,21 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Transform your business with MPL Softwares – experts in web design, development, e-commerce solutions, and mobile app development. Build stunning websites, custom landing pages, and powerful mobile apps that drive results. Let's create your digital success story!" />
-
+    <meta name="title" content="About MPL Softwares | Innovative Tech Solutions with a Creative Touch"/>
+    <meta name="keywords" content="About MPL Softwares
+    Creative tech solutions
+    Innovative software development
+    Experienced tech team
+    Professional software developers
+    High-tech solutions
+    Digital innovation experts
+    Team of tech masterminds
+    Collaborative software development
+    Cutting-edge technology experts
+    
+    " />
+    <meta name="author" content="MPL Softwares" />
+    <meta name="description" content="Discover MPL Softwares – a creative, inspiring team of tech masterminds delivering innovative software solutions. With expertise from global corporations and a passion for innovation, we transform ideas into impactful digital solutions." />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -158,9 +171,9 @@
                                 </h3><!-- /.sec-title__title -->
                             </div><!-- /.sec-title -->
                             <p class="about-one__content__text">
-                                We are a team of tech masterminds who bring experience from top global corporations into a creative, high-energy workspace. At MPL Technologies, innovation thrives, and every project is crafted with precision and passion.
+                                We are a team of tech masterminds who bring experience from top global corporations into a creative, high-energy workspace. Innovation is the heartbeat of everything we do, and every project is crafted with precision, passion, and purpose.                            </p>
+                            <p>From brainstorming bold ideas to delivering flawless solutions, we combine cutting-edge technology with years of experience to help your business scale and succeed.
                             </p>
-                            <p>From brainstorming to delivery, we combine cutting-edge technology and years of expertise to help your business scale and succeed.</p>
                             <p>Small Team, Big Impact. 🚀                            </p>
                             
                         </div><!-- /.why-choose-two__content -->
@@ -184,7 +197,8 @@
 
                         <h6 class="sec-title__tagline">Our creativeness</h6><!-- /.sec-title__tagline -->
 
-                        <h3 class="sec-title__title">Our Process! Your Success!</h3><!-- /.sec-title__title -->
+                        <h3 class="sec-title__title">Our Process! Your Success!</h3>
+                        <p class="pt-30">At MPL Softwares, our journey with you is driven by a clear and collaborative process</p>
                     </div><!-- /.sec-title -->
                 </div>
                 <div class="row gutter-y-30">
@@ -196,7 +210,7 @@
                             </div>
                             <h3 class="work-process-two__item__title">Discover & Collaborate</h3>
                             <p class="work-process-two__item__text">
-                                We listen, understand, and shape your ideas into reality.
+                                We listen, understand, and transform your ideas into reality.
                             </p>
                         </div>
                     </div><!-- item -->
@@ -204,7 +218,7 @@
                         <div class="work-process-two__item work-process-two__item--reverse">
                             <h3 class="work-process-two__item__title">Plan & Strategize</h3>
                             <p class="work-process-two__item__text">
-                                Clear goals, smart strategies, and a roadmap for success.
+                                Clear goals, smart strategies, and a roadmap for guaranteed success.
                             </p>
                             <div class="work-process-two__item__icon">
                                 <i class="flaticon-define"></i>
@@ -220,7 +234,7 @@
                             </div>
                             <h3 class="work-process-two__item__title">Innovate & Create</h3>
                             <p class="work-process-two__item__text">
-                                Building creative, high-tech solutions tailored to you.
+                                Building creative, high-tech solutions tailored to your unique needs.
                             </p>
                         </div>
                     </div><!-- item -->
@@ -228,7 +242,7 @@
                         <div class="work-process-two__item work-process-two__item--reverse">
                             <h3 class="work-process-two__item__title">Deliver & Support</h3>
                             <p class="work-process-two__item__text">
-                                Launching with precision and supporting for growth.
+                                Launching with precision and standing by you for seamless growth.
                             </p>
                             <div class="work-process-two__item__icon">
                                 <i class="flaticon-solution"></i>
@@ -249,7 +263,9 @@
 
                         <h6 class="sec-title__tagline">Our expert team</h6><!-- /.sec-title__tagline -->
 
-                        <h3 class="sec-title__title">Meet Our Professional<br> Team Members</h3><!-- /.sec-title__title -->
+                        <h3 class="sec-title__title">Meet the Visionaries
+                            <br>  Behind MPL Softwares</h3><!-- /.sec-title__title -->
+                            <!-- <p class="pt-30">Our team of passionate professionals brings diverse skills, creativity, and expertise to every project. Together, we push boundaries, embrace challenges, and create solutions that make an impact.</p> -->
                     </div><!-- /.sec-title -->
                     <!-- <a class="mpl-btn" href="team.html">
                         <span class="mpl-btn__text">View ALL Member</span>
