--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,17 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Transform your business with MPL Softwares – experts in web design, development, e-commerce solutions, and mobile app development. Build stunning websites, custom landing pages, and powerful mobile apps that drive results. Let's create your digital success story!" />
-
+    <meta name="title" content="Contact MPL Softwares | 24/7 Support with 1-Hour Response Time"/>
+    <meta name="keywords" content="Contact MPL Softwares
+    24/7 customer support
+    Quick response software company
+    Software development inquiries
+    Reach MPL Softwares
+    Tech support and consultation       
+    " />
+    <meta name="author" content="MPL Softwares" />
+    <meta name="description" content="Contact MPL Softwares for 24/7 support and accurate responses within 1 hour. Reach out for inquiries, consultations, or to start your project today!" />
+    
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -137,7 +146,8 @@
             
             <!-- /.page-header__bg -->
             <div class="container">
-                <h2 class="page-header__title">Contact Us</h2>
+                <h2 class="page-header__title">Let’s Connect</h2>
+                <p class="contact-subText">Fill out the form below, and one of our experts will be in touch within an hour.</p>
                 <!-- <ul class="growim-breadcrumb list-unstyled">
                     <li><a href="index.html">Home</a></li>
                     <li><span>About Us</span></li>
@@ -214,7 +224,7 @@
                             <h3 class="google-map__info__title">UAE</h3>
                             <ul class="list-unstyled google-map__info__list">
                                 <li><i class="flaticon-pin"></i>509, IT Plaza, Dubai Silicon Oasis</li>
-                                <li><i class="flaticon-phone"></i><a href="tel:+61086660112">+971 543 8573 64</a></li>
+                                <li><i class="flaticon-phone"></i><a href="tel:+971 543 8573 64">+971 543 8573 64</a></li>
                                 <li><i class="flaticon-email"></i><a href="mailto:info@gmail.com">info@gmail.com</a></li>
                             </ul>
                         </div>
@@ -222,7 +232,7 @@
                             <h3 class="google-map__info__title">India</h3>
                             <ul class="list-unstyled google-map__info__list">
                                 <li><i class="flaticon-pin"></i>No 5, RH constructions, Chrompet, Chennai - 44</li>
-                                <li><i class="flaticon-phone"></i><a href="tel:+61086660112">+9498069804</a></li>
+                                <li><i class="flaticon-phone"></i><a href="tel:+919498069804">+91 9498069804</a></li>
                                 <li><i class="flaticon-email"></i><a href="mailto:info@gmail.com">info@gmail.com</a></li>
                             </ul>
                         </div>
