--- a/contact.html
+++ b/contact.html
@@ -223,7 +223,7 @@
                         <div class="google-map__info">
                             <h3 class="google-map__info__title">UAE</h3>
                             <ul class="list-unstyled google-map__info__list">
-                                <li><i class="flaticon-pin"></i>509, IT Plaza, Dubai Silicon Oasis</li>
+                                <li><i class="flaticon-pin"></i>IT Plaza, Dubai Silicon Oasis</li>
                                 <li><i class="flaticon-phone"></i><a href="tel:+971 543 8573 64">+971 543 8573 64</a></li>
                                 <li><i class="flaticon-email"></i><a href="mailto:info@gmail.com">info@gmail.com</a></li>
                             </ul>
@@ -312,8 +312,8 @@
                                 <h2 class="footer-widget__title">contact us</h2><!-- /.footer-widget__title -->
                                 <ul class="list-unstyled footer-widget__info">
                                     <li><i class="flaticon-pin"></i>Apt 1B, 132 Laurel Way, Herndon, Virginia, 20170, USA</li>
-                                    <li><i class="flaticon-pin"></i>509, Narcassis tower, DSO, Dubai, UAE</li>
-                                    <li><i class="flaticon-phone"></i><a href="tel:+16618577499">+1 (469) 263 0399</a></li>
+                                    <li><i class="flaticon-pin"></i>IT Plaza, DSO, Dubai, UAE</li>
+                                    <li><i class="flaticon-phone"></i><a href="tel:+971543857364">+971 543857364</a></li>
                                     <li><i class="flaticon-email"></i><a href="mailto:contact@mpltech.com">contact@mpltech.com</a></li>
                                 </ul><!-- /.list-unstyled -->
                             </div><!-- /.footer-widget -->
